# fastcrudapi

./: .gitignore  404.html  README.md  mkdocs.yml  pyproject.toml
.github/actions/comment-docs-preview-in-pr/: Dockerfile  action.yml
.github/workflows/: build-docs.yml  ci.yml  deploy-docs.yml  test.yml
docs/: index.md  missing-translation.md
docs/en/: mkdocs.yml
docs/en/docs/: help.md  index.md
docs/en/docs/tutorial/: first-step.md  sqlalchemy.md  sqlmodel.md
docs/tutorial/: customize.md  index.md
docs/vi/docs/: help.md  index.md
en/docs/: index.html
en/docs/help/: index.html
en/docs/tutorial/: index.html
en/docs/tutorial/sqlalchemy/: index.html
en/docs/tutorial/sqlmodel/: index.html
fastcrudapi/: builder.py  core.py
missing-translation/: index.html
scripts/: docs.py  format.sh  lint.sh
search/: search_index.json
vi/docs/: index.html
vi/docs/tutorial/customize/: index.html
vi/docs/tutorial/first-step/: index.html
