[tool.poetry]
name = "fastcrudapi"
version = "0.1.3"
description = "The package helps to build CRUD APIs for models based on FastAPI."
authors = ["lpthong90 <lpthong90@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.108.0"

[tool.poetry.extras]
sqlmodel = ["sqlmodel"]
SQLAlchemy = ["SQLAlchemy"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
